test/test_cases/valid/extra/stringArrays2.wacc
# spooky strings

# Output:
# true
# true
# true

# Program:

begin
	char[] a = ['f','s','t'];
	string b = "snd";
	string[] c = [a, b];
	println c[0] == a ;
	println c[0][1] == 'f';
	println c[1][2] == 'd'
end
