test/test_cases/invalid/semanticErr/scope/selfReferenceArray.wacc
# spooky strings

# Output:
#

# Program:

begin
	int[][] c = [c[0]] ;
	println c ;
	println c[0] ;
	println c[0][0]
end
